immutable withoutFirst and withoutLast operations